<resources>
    <string name="app_name">
        ZARA
    </string>
    <string name="shop_name">
        ZARA
    </string>
    <string name="button_first_window">
        Comenzar
    </string>

    <!-- Elementos del recyclerView -->
    <string name="textView_choose_code_option">
        Escoja alguna de las siguientes opciones para leer el código de la prenda
    </string>
    <string name="button_qrscanner_code">Escáner</string>
    <string name="button_dialog_code">Teclado</string>
    <string name="textView_title_name_clothe">Nombre:</string>
    <string name="textView_title_size_clothe">Talla</string>
    <string name="textView_title_price_clothe">Precio</string>
    <string name="textView_title_color_clothe">Color</string>

    <!-- Elementos de la pantalla 'ResumeShopWindow -->
    <string name="textView_pay_clothes">Pagar la compra</string>
    <string name="textView_title_resume">Lista compra</string>
    <string name="textView_title_dialog_code">Insertar código de barras</string>
    <string name="textView_title_view_clothe">Visualizar prenda</string>
    <string name="textView_text_dialog_code">Inserte los número del código de barras</string>
    <string name="button_delete_clothe">Eliminar</string>

    <string name="button_insert_barcode">Insertar código</string>
    <string name="editText_num_barcode">Código de barras</string>
    <string name="message_delete_clothe">Prenda eliminada</string>

    <!-- Elementos del dialog 'custom_dialog_sign_in && custom_dialog_sign_up' -->
    <string name="textView_title_sign_in">Iniciar sesion</string>
    <string name="textView_title_username">Usuario</string>
    <string name="textView_title_password">Contraseña</string>
    <string name="textView_title_sign_up">Registrar</string>
    <string name="textView_title_telephone">Télefono</string>
    <string name="textView_title_email">Email</string>
    <string name="textView_sign_up">¿No tienes una cuenta? Registrate ahora</string>
    <string name="textView_title_repeat_password">Confirmar contraseña</string>
    <string name="editText_username">Inserte su nombre</string>
    <string name="editText_password">Inserte la contraseña</string>
    <string name="editText_telephone_sign_up">Inserte su número</string>
    <string name="editText_email_sign_up">Inserte su correo</string>
    <string name="editText_repeat_password_sign_up">Repita la contraseña</string>
    <string name="button_sign_in">Iniciar sesión</string>
    <string name="button_sign_up">Registrarse</string>

    <!-- Titulos de los apartados del menú y de las ventanas -->
    <string name="title_shop">C O M P R A</string>
    <string name="title_login">C U E N T A - Z A R A</string>
    <string name="title_dresser">T I E N D A</string>
    <string name="title_final_shop">R E S U M E N</string>

    <!-- Elementos de la ventana 'shop_window', los filtros -->
    <string name="textView_title_name_category">Categoria</string>
    <string name="editText_filter_name">Inserte la referencia de la prenda</string>

    <!-- Colores de los productos para la traducción correcta -->
    <string name="black">Negro</string>
    <string name="pink">Rosa</string>
    <string name="beige">Beige</string>
    <string name="blue">Azul</string>
    <string name="variosColours">Variado</string>
    <string name="green">Verde</string>
    <string name="white">Blanco</string>
    <string name="kaki">Kaki</string>
    <string name="metallized">Metalizado</string>
    <string name="yellow">Amarillo</string>
    <string name="noSize">Talla única</string>
    <string name="orange">Naranja</string>
    <string name="brown">Marrón</string>

    <!-- Largos de los productos para la traducción correcta -->
    <string name="large">Largo</string>
    <string name="curt">Corto</string>
    <string name="midi">Midi</string>
    <string name="high">Altos</string>
    <string name="plain">Planos</string>
    <string name="lower">Bajos</string>
    <string name="big">Grande</string>
    <string name="little">Pequeño</string>

    <!-- Tipos de productos para la traducción correcta -->
    <string name="t_shirt">Camiseta</string>
    <string name="shirt">Camisa</string>
    <string name="chaquet">Abrigo</string>
    <string name="shoes">Zapatos</string>
    <string name="dress">Vestido</string>
    <string name="waistcoat">Chaleco</string>
    <string name="mono">Mono</string>
    <string name="shorts">Shorts</string>
    <string name="swimsuit">Bañador</string>
    <string name="trousers">Pantalón</string>
    <string name="bag">Bolso</string>

    <!-- Elementos del dialog 'custom_error_dialog' && mensajes de error -->
    <string name="textView_errorTitle">Error</string>
    <string name="button_error">Cerrar</string>
    <string name="textView_errorDesc">Ha sucedido un error</string>
    <string name="message_error_empty_field">Hay un campo vacio</string>
    <string name="message_error_different_passwords">Las contraseñas no coinciden</string>
    <string name="already_purchase">Ya te encuentras en la compra</string>
    <string name="already_shopping">Ya te encuentras en la tienda</string>
    <string name="products_cart">Debe haber productos dentro de la cesta</string>
    <string name="product_not_exists">"El código insertado no se encuentra registrado en nuestra base"</string>
    <string name="cant_sign_in">Los datos aportados no coinciden con ninguna de nuestras cuentas</string>
    <string name="cant_get_products">No se pudo sacar productos de la base de datos</string>

    <!-- Elementos del dialog 'custom_dialog_discounts' -->
    <string name="textView_title_discount">Descuentos disponibles</string>
    <string name="button_apply_discount">Aplicar</string>

    <!-- Elementos del dialog 'custom_dialog_clothe_resume -->
    <string name="message_warehouse_cart">Producto añadido al carrito correctamente</string>
    <string name="message_warehouse_take_out">Producto solicitado correctamente</string>
    <string name="button_add_cart">Añadir al carrito</string>
    <string name="button_take_out_clothe">Sacar de almacén</string>

    <!-- Elementos del window "PayWindow" -->
    <string name="button_final_pay">Finalizar compra</string>
    <string name="textView_final_resume">Resumen de la compra</string>
    <string name="textView_percent_tax">Porcentaje IVA</string>
    <string name="textView_percent_discounts">Porcentaje descuentos</string>
    <string name="textView_total_amount">TOTAL A PAGAR</string>

    <!-- Elementos de las pantallas de administrador -->
    <string name="textView_config_admin">Configuración de administrador</string>
    <string name="button_modify_clothe_admin">Modificar producto</string>
    <string name="button_delete_clothe_admin">Eliminar producto</string>
    <string name="editText_hint_price">Inserte nuevo precio...</string>
    <string name="editText_hint_size">Inserte nueva talla...</string>
</resources>