<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_sign_up" />

        <TextView
            android:id="@+id/textView_title_sign_in"
            android:layout_width="421dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/textView_title_sign_up"
            android:textAlignment="viewStart"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="560dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_username_sign_up"
            android:layout_width="109dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="22dp"
            android:text="@string/textView_title_username"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editText_username_sign_up"
            android:layout_width="332dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/textView_title_username_sign_up"
            android:ems="10"
            android:hint="@string/editText_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="557dp"
        android:layout_height="84dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_telephone"
            android:layout_width="131dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="21dp"
            android:text="@string/textView_title_telephone"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editText_telephone_sign_up"
            android:layout_width="329dp"
            android:layout_height="51dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="22dp"
            android:layout_toEndOf="@+id/textView_title_telephone"
            android:ems="10"
            android:hint="@string/editText_telephone_sign_up"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="560dp"
        android:layout_height="73dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_email"
            android:layout_width="109dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="17dp"
            android:text="@string/textView_title_email"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editText_email_sign_up"
            android:layout_width="331dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="13dp"
            android:layout_toEndOf="@+id/textView_title_email"
            android:ems="10"
            android:hint="@string/editText_email_sign_up"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="25dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="560dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_password_sign_up"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="22dp"
            android:text="@string/textView_title_password"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editText_password_sign_up"
            android:layout_width="322dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@+id/textView_title_password_sign_up"
            android:ems="10"
            android:hint="@string/editText_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="25dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="560dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_repeat_password"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="6dp"
            android:text="@string/textView_title_repeat_password"
            android:textAlignment="center"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editText_repeat_password_sign_up"
            android:layout_width="323dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@+id/textView_title_repeat_password"
            android:ems="10"
            android:hint="@string/editText_repeat_password_sign_up"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="25dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_sign_up" />

</LinearLayout>