<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView_title_sign_in"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textView_title_sign_in"
        android:textAlignment="center"
        android:textSize="25dp" />

    <RelativeLayout
        android:layout_width="846dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_username"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="91dp"
            android:layout_marginTop="28dp"
            android:text="@string/textView_title_username"
            android:textAlignment="center"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_username_sign_in"
            android:layout_width="538dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="51dp"
            android:ems="10"
            android:hint="@string/editText_username"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/textView_title_password"
            android:layout_width="306dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="29dp"
            android:text="@string/textView_title_password"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_password_sign_in"
            android:layout_width="540dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="52dp"
            android:ems="10"
            android:hint="@string/editText_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </RelativeLayout>

</LinearLayout>