<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutErrorDialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorTitle"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/shape_error_dialog"
            android:padding="12dp"
            android:text="@string/textView_errorTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_error"
            app:layout_constraintBottom_toBottomOf="@id/errorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/errorTitle"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/errorDesc"
            android:layout_width="339dp"
            android:layout_height="76dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/textView_errorDesc"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorTitle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/errorButton"
            android:layout_width="97dp"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/red"
            android:text="@string/button_error"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@id/layoutErrorDialog"
            app:layout_constraintTop_toBottomOf="@+id/errorDesc"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>